<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sohle"
    android:orientation="vertical"
    android:paddingTop="125dp">


    <TextView
        android:id="@+id/vorfussdruck"
        android:padding="20dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vorfussdruck"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/mittedruck"
        android:padding="20dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/druck_links"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/fersedruck"
        android:padding="20dp"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duck_ferse"
        android:textAlignment="center" />

    <Button
        android:id="@+id/feedbackfragmentbuttoncapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Get Feednback" />


</LinearLayout>